antenna/src/antenna/preprocessor/v3/parser/APPParser.java
// $ANTLR 3.0.1 src/antenna/preprocessor/v3/parser/APP.g 2008-06-20 17:51:57

/**
 * Automatically generated code, do not edit!
 * To modify, make changes to APP.g (ANTLR file).
 */
package antenna.preprocessor.v3.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class APPParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DOT", "COMMA", "SEMI", "PERCENT", "LPAR", "RPAR", "BLPAR", "BRPAR", "NOT", "XOR", "AT", "NEQ", "LT", "GT", "LTE", "GTE", "DEBUG", "INFO", "WARN", "ERROR", "FATAL", "DEFINE", "UNDEFINE", "IF", "ELIF", "CONDITION", "IFDEF", "IFNDEF", "ELIFDEF", "ELIFNDEF", "ENDIF", "ELSE", "ENDINCLUDE", "INCLUDE", "EXPAND", "MDEBUG", "ENDDEBUG", "UNSET", "ADD_IF_NEW", "TRUE", "FALSE", "WS", "FSLASH", "BSLASH", "ASLASH", "COLON", "DIGIT_0", "DIGIT_1", "CHAR", "EOL", "SYMBOL", "NUMBER", "STRING", "AND", "OR", "EQ", "'//'", "'#'"
    };
    public static final int COMMA=5;
    public static final int ELIFNDEF=33;
    public static final int PERCENT=7;
    public static final int BLPAR=10;
    public static final int NUMBER=55;
    public static final int LPAR=8;
    public static final int FALSE=44;
    public static final int FATAL=24;
    public static final int ENDINCLUDE=36;
    public static final int ERROR=23;
    public static final int IFNDEF=31;
    public static final int BRPAR=11;
    public static final int OR=58;
    public static final int IFDEF=30;
    public static final int DOT=4;
    public static final int AND=57;
    public static final int GTE=19;
    public static final int INCLUDE=37;
    public static final int ELIFDEF=32;
    public static final int CONDITION=29;
    public static final int SYMBOL=54;
    public static final int NEQ=15;
    public static final int UNDEFINE=26;
    public static final int AT=14;
    public static final int ADD_IF_NEW=42;
    public static final int ENDIF=34;
    public static final int RPAR=9;
    public static final int INFO=21;
    public static final int UNSET=41;
    public static final int WS=45;
    public static final int WARN=22;
    public static final int CHAR=52;
    public static final int EQ=59;
    public static final int STRING=56;
    public static final int MDEBUG=39;
    public static final int LT=16;
    public static final int GT=17;
    public static final int DIGIT_0=50;
    public static final int ELIF=28;
    public static final int SEMI=6;
    public static final int LTE=18;
    public static final int DEFINE=25;
    public static final int EXPAND=38;
    public static final int FSLASH=46;
    public static final int ELSE=35;
    public static final int BSLASH=47;
    public static final int IF=27;
    public static final int EOF=-1;
    public static final int EOL=53;
    public static final int XOR=13;
    public static final int ENDDEBUG=40;
    public static final int COLON=49;
    public static final int DEBUG=20;
    public static final int ASLASH=48;
    public static final int DIGIT_1=51;
    public static final int NOT=12;
    public static final int TRUE=43;

        public APPParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[18+1];
         }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "src/antenna/preprocessor/v3/parser/APP.g"; }

    
    protected void mismatch(IntStream input, int ttype, BitSet follow)
    throws RecognitionException
    {
    throw new MismatchedTokenException(ttype, input);
    }
    public void recoverFromMismatchedSet(IntStream input,
    RecognitionException e,
    BitSet follow)
    throws RecognitionException
    {
    throw e;
    }


    public static class prefix_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start prefix
    // src/antenna/preprocessor/v3/parser/APP.g:156:1: prefix : '//' '#' ;
    public final prefix_return prefix() throws RecognitionException {
        prefix_return retval = new prefix_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal1=null;
        Token char_literal2=null;

        Object string_literal1_tree=null;
        Object char_literal2_tree=null;

        try {
            // src/antenna/preprocessor/v3/parser/APP.g:156:8: ( '//' '#' )
            // src/antenna/preprocessor/v3/parser/APP.g:156:10: '//' '#'
            {
            root_0 = (Object)adaptor.nil();

            string_literal1=(Token)input.LT(1);
            match(input,60,FOLLOW_60_in_prefix661); if (failed) return retval;
            char_literal2=(Token)input.LT(1);
            match(input,61,FOLLOW_61_in_prefix664); if (failed) return retval;
            if ( backtracking==0 ) {
            char_literal2_tree = (Object)adaptor.create(char_literal2);
            adaptor.addChild(root_0, char_literal2_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end prefix

    public static class r_boolean_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start r_boolean
    // src/antenna/preprocessor/v3/parser/APP.g:158:1: r_boolean : ( TRUE | FALSE );
    public final r_boolean_return r_boolean() throws RecognitionException {
        r_boolean_return retval = new r_boolean_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set3=null;

        Object set3_tree=null;

        try {
            // src/antenna/preprocessor/v3/parser/APP.g:158:11: ( TRUE | FALSE )
            // src/antenna/preprocessor/v3/parser/APP.g:
            {
            root_0 = (Object)adaptor.nil();

            set3=(Token)input.LT(1);
            if ( (input.LA(1)>=TRUE && input.LA(1)<=FALSE) ) {
                input.consume();
                if ( backtracking==0 ) adaptor.addChild(root_0, adaptor.create(set3));
                errorRecovery=false;failed=false;
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                MismatchedSetException mse =
                    new MismatchedSetException(null,input);
                recoverFromMismatchedSet(input,mse,FOLLOW_set_in_r_boolean0);    throw mse;
            }


            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end r_boolean

    public static class ident_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start ident
    // src/antenna/preprocessor/v3/parser/APP.g:159:1: ident : ( SYMBOL | STRING | NUMBER | r_boolean );
    public final ident_return ident() throws RecognitionException {
        ident_return retval = new ident_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SYMBOL4=null;
        Token STRING5=null;
        Token NUMBER6=null;
        r_boolean_return r_boolean7 = null;


        Object SYMBOL4_tree=null;
        Object STRING5_tree=null;
        Object NUMBER6_tree=null;

        try {
            // src/antenna/preprocessor/v3/parser/APP.g:159:6: ( SYMBOL | STRING | NUMBER | r_boolean )
            int alt1=4;
            switch ( input.LA(1) ) {
            case SYMBOL:
                {
                alt1=1;
                }
                break;
            case STRING:
                {
                alt1=2;
                }
                break;
            case NUMBER:
                {
                alt1=3;
                }
                break;
            case TRUE:
            case FALSE:
                {
                alt1=4;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("159:1: ident : ( SYMBOL | STRING | NUMBER | r_boolean );", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // src/antenna/preprocessor/v3/parser/APP.g:159:8: SYMBOL
                    {
                    root_0 = (Object)adaptor.nil();

                    SYMBOL4=(Token)input.LT(1);
                    match(input,SYMBOL,FOLLOW_SYMBOL_in_ident682); if (failed) return retval;
                    if ( backtracking==0 ) {
                    SYMBOL4_tree = (Object)adaptor.create(SYMBOL4);
                    adaptor.addChild(root_0, SYMBOL4_tree);
                    }

                    }
                    break;
                case 2 :
                    // src/antenna/preprocessor/v3/parser/APP.g:159:17: STRING
                    {
                    root_0 = (Object)adaptor.nil();

                    STRING5=(Token)input.LT(1);
                    match(input,STRING,FOLLOW_STRING_in_ident686); if (failed) return retval;
                    if ( backtracking==0 ) {
                    STRING5_tree = (Object)adaptor.create(STRING5);
                    adaptor.addChild(root_0, STRING5_tree);
                    }

                    }
                    break;
                case 3 :
                    // src/antenna/preprocessor/v3/parser/APP.g:159:26: NUMBER
                    {
                    root_0 = (Object)adaptor.nil();

                    NUMBER6=(Token)input.LT(1);
                    match(input,NUMBER,FOLLOW_NUMBER_in_ident690); if (failed) return retval;
                    if ( backtracking==0 ) {
                    NUMBER6_tree = (Object)adaptor.create(NUMBER6);
                    adaptor.addChild(root_0, NUMBER6_tree);
                    }

                    }
                    break;
                case 4 :
                    // src/antenna/preprocessor/v3/parser/APP.g:159:35: r_boolean
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_r_boolean_in_ident694);
                    r_boolean7=r_boolean();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, r_boolean7.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end ident

    public static class bool_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start bool
    // src/antenna/preprocessor/v3/parser/APP.g:161:1: bool : ( ident | LPAR expression RPAR );
    public final bool_return bool() throws RecognitionException {
        bool_return retval = new bool_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token LPAR9=null;
        Token RPAR11=null;
        ident_return ident8 = null;

        expression_return expression10 = null;


        Object LPAR9_tree=null;
        Object RPAR11_tree=null;

        try {
            // src/antenna/preprocessor/v3/parser/APP.g:161:5: ( ident | LPAR expression RPAR )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=TRUE && LA2_0<=FALSE)||(LA2_0>=SYMBOL && LA2_0<=STRING)) ) {
                alt2=1;
            }
            else if ( (LA2_0==LPAR) ) {
                alt2=2;
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("161:1: bool : ( ident | LPAR expression RPAR );", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // src/antenna/preprocessor/v3/parser/APP.g:161:7: ident
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ident_in_bool702);
                    ident8=ident();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, ident8.getTree());

                    }
                    break;
                case 2 :
                    // src/antenna/preprocessor/v3/parser/APP.g:162:9: LPAR expression RPAR
                    {
                    root_0 = (Object)adaptor.nil();

                    LPAR9=(Token)input.LT(1);
                    match(input,LPAR,FOLLOW_LPAR_in_bool712); if (failed) return retval;
                    pushFollow(FOLLOW_expression_in_bool715);
                    expression10=expression();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, expression10.getTree());
                    RPAR11=(Token)input.LT(1);
                    match(input,RPAR,FOLLOW_RPAR_in_bool717); if (failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end bool

    public static class not_bool_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start not_bool
    // src/antenna/preprocessor/v3/parser/APP.g:165:1: not_bool : ( NOT )* bool ;
    public final not_bool_return not_bool() throws RecognitionException {
        not_bool_return retval = new not_bool_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NOT12=null;
        bool_return bool13 = null;


        Object NOT12_tree=null;

        try {
            // src/antenna/preprocessor/v3/parser/APP.g:165:10: ( ( NOT )* bool )
            // src/antenna/preprocessor/v3/parser/APP.g:165:12: ( NOT )* bool
            {
            root_0 = (Object)adaptor.nil();

            // src/antenna/preprocessor/v3/parser/APP.g:165:12: ( NOT )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==NOT) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src/antenna/preprocessor/v3/parser/APP.g:165:13: NOT
            	    {
            	    NOT12=(Token)input.LT(1);
            	    match(input,NOT,FOLLOW_NOT_in_not_bool740); if (failed) return retval;
            	    if ( backtracking==0 ) {
            	    NOT12_tree = (Object)adaptor.create(NOT12);
            	    root_0 = (Object)adaptor.becomeRoot(NOT12_tree, root_0);
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            pushFollow(FOLLOW_bool_in_not_bool745);
            bool13=bool();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, bool13.getTree());

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end not_bool

    public static class eq_bool_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start eq_bool
    // src/antenna/preprocessor/v3/parser/APP.g:167:1: eq_bool : not_bool ( ( AT | EQ | NEQ | LT | GT | LTE | GTE ) not_bool )? ;
    public final eq_bool_return eq_bool() throws RecognitionException {
        eq_bool_return retval = new eq_bool_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AT15=null;
        Token EQ16=null;
        Token NEQ17=null;
        Token LT18=null;
        Token GT19=null;
        Token LTE20=null;
        Token GTE21=null;
        not_bool_return not_bool14 = null;

        not_bool_return not_bool22 = null;


        Object AT15_tree=null;
        Object EQ16_tree=null;
        Object NEQ17_tree=null;
        Object LT18_tree=null;
        Object GT19_tree=null;
        Object LTE20_tree=null;
        Object GTE21_tree=null;

        try {
            // src/antenna/preprocessor/v3/parser/APP.g:167:9: ( not_bool ( ( AT | EQ | NEQ | LT | GT | LTE | GTE ) not_bool )? )
            // src/antenna/preprocessor/v3/parser/APP.g:168:5: not_bool ( ( AT | EQ | NEQ | LT | GT | LTE | GTE ) not_bool )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_not_bool_in_eq_bool757);
            not_bool14=not_bool();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, not_bool14.getTree());
            // src/antenna/preprocessor/v3/parser/APP.g:168:14: ( ( AT | EQ | NEQ | LT | GT | LTE | GTE ) not_bool )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=AT && LA5_0<=GTE)||LA5_0==EQ) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // src/antenna/preprocessor/v3/parser/APP.g:168:15: ( AT | EQ | NEQ | LT | GT | LTE | GTE ) not_bool
                    {
                    // src/antenna/preprocessor/v3/parser/APP.g:168:15: ( AT | EQ | NEQ | LT | GT | LTE | GTE )
                    int alt4=7;
                    switch ( input.LA(1) ) {
                    case AT:
                        {
                        alt4=1;
                        }
                        break;
                    case EQ:
                        {
                        alt4=2;
                        }
                        break;
                    case NEQ:
                        {
                        alt4=3;
                        }
                        break;
                    case LT:
                        {
                        alt4=4;
                        }
                        break;
                    case GT:
                        {
                        alt4=5;
                        }
                        break;
                    case LTE:
                        {
                        alt4=6;
                        }
                        break;
                    case GTE:
                        {
                        alt4=7;
                        }
                        break;
                    default:
                        if (backtracking>0) {failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("168:15: ( AT | EQ | NEQ | LT | GT | LTE | GTE )", 4, 0, input);

                        throw nvae;
                    }

                    switch (alt4) {
                        case 1 :
                            // src/antenna/preprocessor/v3/parser/APP.g:168:17: AT
                            {
                            AT15=(Token)input.LT(1);
                            match(input,AT,FOLLOW_AT_in_eq_bool762); if (failed) return retval;
                            if ( backtracking==0 ) {
                            AT15_tree = (Object)adaptor.create(AT15);
                            root_0 = (Object)adaptor.becomeRoot(AT15_tree, root_0);
                            }

                            }
                            break;
                        case 2 :
                            // src/antenna/preprocessor/v3/parser/APP.g:168:23: EQ
                            {
                            EQ16=(Token)input.LT(1);
                            match(input,EQ,FOLLOW_EQ_in_eq_bool767); if (failed) return retval;
                            if ( backtracking==0 ) {
                            EQ16_tree = (Object)adaptor.create(EQ16);
                            root_0 = (Object)adaptor.becomeRoot(EQ16_tree, root_0);
                            }

                            }
                            break;
                        case 3 :
                            // src/antenna/preprocessor/v3/parser/APP.g:168:29: NEQ
                            {
                            NEQ17=(Token)input.LT(1);
                            match(input,NEQ,FOLLOW_NEQ_in_eq_bool772); if (failed) return retval;
                            if ( backtracking==0 ) {
                            NEQ17_tree = (Object)adaptor.create(NEQ17);
                            root_0 = (Object)adaptor.becomeRoot(NEQ17_tree, root_0);
                            }

                            }
                            break;
                        case 4 :
                            // src/antenna/preprocessor/v3/parser/APP.g:168:36: LT
                            {
                            LT18=(Token)input.LT(1);
                            match(input,LT,FOLLOW_LT_in_eq_bool777); if (failed) return retval;
                            if ( backtracking==0 ) {
                            LT18_tree = (Object)adaptor.create(LT18);
                            root_0 = (Object)adaptor.becomeRoot(LT18_tree, root_0);
                            }

                            }
                            break;
                        case 5 :
                            // src/antenna/preprocessor/v3/parser/APP.g:168:42: GT
                            {
                            GT19=(Token)input.LT(1);
                            match(input,GT,FOLLOW_GT_in_eq_bool782); if (failed) return retval;
                            if ( backtracking==0 ) {
                            GT19_tree = (Object)adaptor.create(GT19);
                            root_0 = (Object)adaptor.becomeRoot(GT19_tree, root_0);
                            }

                            }
                            break;
                        case 6 :
                            // src/antenna/preprocessor/v3/parser/APP.g:168:48: LTE
                            {
                            LTE20=(Token)input.LT(1);
                            match(input,LTE,FOLLOW_LTE_in_eq_bool787); if (failed) return retval;
                            if ( backtracking==0 ) {
                            LTE20_tree = (Object)adaptor.create(LTE20);
                            root_0 = (Object)adaptor.becomeRoot(LTE20_tree, root_0);
                            }

                            }
                            break;
                        case 7 :
                            // src/antenna/preprocessor/v3/parser/APP.g:168:55: GTE
                            {
                            GTE21=(Token)input.LT(1);
                            match(input,GTE,FOLLOW_GTE_in_eq_bool792); if (failed) return retval;
                            if ( backtracking==0 ) {
                            GTE21_tree = (Object)adaptor.create(GTE21);
                            root_0 = (Object)adaptor.becomeRoot(GTE21_tree, root_0);
                            }

                            }
                            break;

                    }

                    pushFollow(FOLLOW_not_bool_in_eq_bool797);
                    not_bool22=not_bool();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, not_bool22.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end eq_bool

    public static class and_bool_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start and_bool
    // src/antenna/preprocessor/v3/parser/APP.g:170:1: and_bool : eq_bool ( AND eq_bool )* ;
    public final and_bool_return and_bool() throws RecognitionException {
        and_bool_return retval = new and_bool_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AND24=null;
        eq_bool_return eq_bool23 = null;

        eq_bool_return eq_bool25 = null;


        Object AND24_tree=null;

        try {
            // src/antenna/preprocessor/v3/parser/APP.g:170:10: ( eq_bool ( AND eq_bool )* )
            // src/antenna/preprocessor/v3/parser/APP.g:170:12: eq_bool ( AND eq_bool )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_eq_bool_in_and_bool807);
            eq_bool23=eq_bool();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, eq_bool23.getTree());
            // src/antenna/preprocessor/v3/parser/APP.g:170:20: ( AND eq_bool )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==AND) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // src/antenna/preprocessor/v3/parser/APP.g:170:21: AND eq_bool
            	    {
            	    AND24=(Token)input.LT(1);
            	    match(input,AND,FOLLOW_AND_in_and_bool810); if (failed) return retval;
            	    if ( backtracking==0 ) {
            	    AND24_tree = (Object)adaptor.create(AND24);
            	    root_0 = (Object)adaptor.becomeRoot(AND24_tree, root_0);
            	    }
            	    pushFollow(FOLLOW_eq_bool_in_and_bool813);
            	    eq_bool25=eq_bool();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) adaptor.addChild(root_0, eq_bool25.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end and_bool

    public static class xor_bool_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start xor_bool
    // src/antenna/preprocessor/v3/parser/APP.g:172:1: xor_bool : and_bool ( XOR and_bool )* ;
    public final xor_bool_return xor_bool() throws RecognitionException {
        xor_bool_return retval = new xor_bool_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token XOR27=null;
        and_bool_return and_bool26 = null;

        and_bool_return and_bool28 = null;


        Object XOR27_tree=null;

        try {
            // src/antenna/preprocessor/v3/parser/APP.g:172:10: ( and_bool ( XOR and_bool )* )
            // src/antenna/preprocessor/v3/parser/APP.g:172:12: and_bool ( XOR and_bool )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_and_bool_in_xor_bool823);
            and_bool26=and_bool();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, and_bool26.getTree());
            // src/antenna/preprocessor/v3/parser/APP.g:172:21: ( XOR and_bool )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==XOR) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // src/antenna/preprocessor/v3/parser/APP.g:172:22: XOR and_bool
            	    {
            	    XOR27=(Token)input.LT(1);
            	    match(input,XOR,FOLLOW_XOR_in_xor_bool826); if (failed) return retval;
            	    if ( backtracking==0 ) {
            	    XOR27_tree = (Object)adaptor.create(XOR27);
            	    root_0 = (Object)adaptor.becomeRoot(XOR27_tree, root_0);
            	    }
            	    pushFollow(FOLLOW_and_bool_in_xor_bool829);
            	    and_bool28=and_bool();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) adaptor.addChild(root_0, and_bool28.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        
        catch (RecognitionException e) {
        throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end xor_bool

    public static class expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start expression
    // src/antenna/preprocessor/v3/parser/APP.g:174:1: expression : xor_bool ( OR xor_bool )* ;
    public final expression_return expression() throws RecognitionException {
        expression_return retval = new expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token OR30=null;
        xor_bool_return xor_bool29 = null;

        xor_bool_return xor_bool31 = null;


        Object OR30_tree=null;

        try {
            // src/antenna/preprocessor/v3/parser/APP.g:174:12: ( xor_bool ( OR xor_bool )* )
            // src/antenna/preprocessor/v3/parser/APP.g:174:14: xor_bool ( OR xor_bool )*
            {
            root_0 = (Object)adaptor.nil();
